# alchemy-rs

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml
.cargo-husky/hooks/: pre-commit
.github/: SECURITY.md  SECURITY_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  provider_support.md
.github/workflows/: ci.yml  close-oversized-prs.yml  codeql.yml  dependency-review.yml
alchemy/: Cargo.toml
alchemy/src/: error.rs  lib.rs
alchemy/src/providers/: env.rs  mod.rs  openai_completions.rs
alchemy/src/stream/: mod.rs
alchemy/src/types/: compat.rs  content.rs  event.rs  message.rs  mod.rs  model.rs  options.rs  tool.rs  usage.rs
alchemy/src/utils/: mod.rs  sanitize.rs
docs/: DESIGN.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  quality-gates.md
docs/api/: error.md  index.md  lib.md
docs/design-docs/: index.md
examples/: api_lifecycle.rs  minimax_live_inline_think.rs  minimax_live_reasoning_split.rs  minimax_live_usage_chunk.rs  simple_chat.rs  test_openrouter.rs  test_tools.rs  tool_call_unified_types_smoke.rs  tool_calling.rs
rules/: README.md  sgconfig.yml
scripts/: dependency_map.py  harness.sh
smokescripts/: README.md  run_tool_call_unified_types.sh
src/: lib.rs  transform.rs
tests/: README.md  stream_integration.rs  tool_calling_integration.rs  transform_integration.rs
website/: .prettierignore  CLAUDE.md  README.md  index.html  package.json
(+87 files in other folders)
