[package]
name = "alchemy"
version = "0.1.0"
edition = "2021"
description = "Unified LLM API with automatic model discovery and provider configuration"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
schemars = "0.8"
jsonschema = "0.18"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
